--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^16.18.12",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "axios": "^1.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.9.0",
@@ -45,6 +46,7 @@
     ]
   },
   "devDependencies": {
+    "g-sheets-api": "^2.1.3",
     "gh-pages": "^5.0.0"
   }
 }
